composite.cpp
@@ -319,8 +319,10 @@ void Workspace::suspendCompositing(bool suspend)
     finishCompositing();
     setupCompositing(); // will do nothing if suspended
     // notify decorations that composition state has changed
-    KDecorationFactory* factory = mgr->factory();
-    factory->reset(SettingCompositing);
+    if (hasDecorationPlugin()) {
+        KDecorationFactory* factory = mgr->factory();
+        factory->reset(SettingCompositing);
+    }
     emit compositingToggled(!compositingSuspended);
 }
 
