plugins.cpp
@@ -31,6 +31,7 @@ namespace KWin
 
 PluginMgr::PluginMgr()
     : KDecorationPlugins(KGlobal::config())
+    , m_noDecoration(false)
 {
     defaultPlugin = (QPixmap::defaultDepth() > 8) ?
                     "kwin3_oxygen" : "kwin3_plastik";
@@ -39,14 +40,24 @@ PluginMgr::PluginMgr()
 
 void PluginMgr::error(const QString &error_msg)
 {
-    qWarning("%s", (i18n("KWin: ") + error_msg +
-                    i18n("\nKWin will now exit...")).toLocal8Bit().data());
-    exit(1);
+    qWarning("%s", (i18n("KWin: ") + error_msg).toLocal8Bit().data());
+
+    setNoDecoration(true);
 }
 
 bool PluginMgr::provides(Requirement)
 {
     return false;
+}
+
+void PluginMgr::setNoDecoration(bool noDecoration)
+{
+    m_noDecoration = noDecoration;
+}
+
+bool PluginMgr::hasNoDecoration() const
+{
+    return m_noDecoration;
 }
 
 } // namespace
